cast getpid() to a qlonglong so we don't rely on a system include to give us a type that QVariant can't handle.

Should fix compile problems on systems where getpid() is a long.

BUG: 180954

svn path=/trunk/KDE/kdepim/; revision=981380